k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${DEPLOYMENT_NAME}"
spec:
  replicas: 2 # 每個 branch 最新版本只需要 1 個 Pod
  selector:
    matchLabels:
      app: "${DEPLOYMENT_NAME}"
  template:
    metadata:
      labels:
        app: "${DEPLOYMENT_NAME}"
    spec:
      containers:
        - name: myapp
          image: "${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPO}/features:${IMAGE_TAG}"
          ports:
            - containerPort: 3000
