k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOYMENT_NAME}-svc
spec:
  type: ClusterIP
  selector:
    app: ${DEPLOYMENT_NAME} # 這裡必須 match Deployment 的 label
  ports:
    - port: 80
      targetPort: 3000
