k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${DEPLOYMENT_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: "gce" # GKE 預設用 GCE Ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${DEPLOYMENT_NAME}-svc
                port:
                  number: 80
